fixetune: overflow:hidden on mobile devices

--- a/css/common.less
+++ b/css/common.less
@@ -35,23 +35,35 @@ p a {text-decoration: underline;}
 /* About
 -----------------------------------------------------------------------------------*/
 #about-box {
-	opacity: 0;
-	background: #04BD93;
-	background: rgba(4, 189, 147,0.98);
 	position: fixed;
 	top: 100%;
 	bottom: 0em;
 	right: 0em;
 	left: 0em;
-	transition: opacity .4s ease, top 0s ease 1s;
-	-webkit-transition: opacity .4s ease, top 0s ease 1s;
+	transition: top 0s ease .4s;
+	-webkit-transition: top 0s ease .4s;
 	z-index: 1001;
+
+	.about-box-container {
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		background: #04BD93;
+		background: rgba(4, 189, 147,0.98);
+		transition: opacity .4s ease;
+		-webkit-transition: opacity .4s ease;
+	}
 
 	&.active {
 		top: 0;
-		opacity: 1;
-		transition: opacity .6s ease-out, top 0s ease 0s;
-		-webkit-transition: opacity .6s ease-out, top 0s ease 0s;
+		transition: top 0s ease 0s;
+		-webkit-transition: top 0s ease 0s;
+
+		.about-box-container {
+			opacity: 1;
+			transition: opacity .6s ease-out;
+			-webkit-transition: opacity .6s ease-out;
+		}
 	}
 }
 #about-box-content {
@@ -75,10 +87,10 @@ p a {text-decoration: underline;}
 	}
 }
 
-.about-box-container {
+.about-box-inner {
 	height: 100%;
 	width: 100%;
-	overflow: scroll;
+	overflow: auto;
 }
 
 
