--- a/css/mobile.less
+++ b/css/mobile.less
@@ -77,7 +77,7 @@ p {line-height: 1.2em; margin-bottom: 0.4em; margin-top: 0.4em; }
 
 /* About
 -----------------------------------------------------------------------------------*/
-#about-box {
+.about-box-container {
 	padding: 1em;
 }
 
