--- a/css/style.less
+++ b/css/style.less
@@ -103,10 +103,10 @@ a:hover {text-decoration: underline;}
 
 /* About
 -----------------------------------------------------------------------------------*/
-#about-box {
+.about-box-container {
 	padding: 0.8em;
 }
-.about-box-container {
+.about-box-inner {
 	border: 0.6em solid #fff;
 }
 
